Closed Bug 357544 Opened 18 years ago Closed 17 years ago

[reflow branch] Frame(wbr)(0) frame didn't implement GetPrefWidth/GetMinWidth

Categories

(Core :: Layout: Block and Inline, defect, P2)

Other Branch
defect

Tracking

()

VERIFIED FIXED
mozilla1.9alpha3

People

(Reporter: MatsPalmgren_bugz, Assigned: dbaron)

References

Details

(Keywords: testcase, Whiteboard: [patch])

Attachments

(2 files)

STEPS TO REPRODUCE
1. load the attached testcase in a debug build

ACTUAL RESULT
WARNING: Frame(wbr)(0) frame didn't implement GetPrefWidth: file nsFrame.cpp, line 2846
WARNING: Frame(wbr)(0) frame didn't implement GetMinWidth: file nsFrame.cpp, line 2832
Attached file Testcase #1
wbr elements just get an nsFrame created for them.  Given that, I should probably remove this warning -- it was there mainly to help me during development.
But I might want to leave it for a bit longer...
Whiteboard: [wbr == nsFrame]
I get the same warning for toolbarspring
We could also create a subclass of nsLeafFrame that returns 0 for the sizes and use that for wbr...
Flags: blocking1.9?
Flags: blocking1.9? → blocking1.9+
Assignee: nobody → dbaron
Status: NEW → ASSIGNED
OS: Linux → All
Priority: -- → P2
Hardware: PC → All
Whiteboard: [wbr == nsFrame] → [patch]
Target Milestone: --- → mozilla1.9alpha3
Attachment #258500 - Flags: superreview?(roc)
Attachment #258500 - Flags: review?(roc)
Attachment #258500 - Flags: superreview?(roc)
Attachment #258500 - Flags: superreview+
Attachment #258500 - Flags: review?(roc)
Attachment #258500 - Flags: review+
Checked in to trunk.
Status: ASSIGNED → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
Flags: in-testsuite-
v.fixed through proxy with ctalbert's debug build
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: