Remove warning about using nsFrame implementation of GetMinWidth and GetPrefWidth.  b=357544  r+sr=roc